--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://hanuairlineserver.mysql.database.azure.com:3306/hanuairlinedb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-    username: hanuadmin@hanuairlineserver
-    password: hanu4C18
+    url: jdbc:mysql://localhost:3306/hanuairlinedb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+    username: root
+    password: doverth
     initialization-mode: always
 
   jpa:
