--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,10 @@
             <artifactId>azure-servicebus-spring-boot-starter</artifactId>
             <version>2.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
