--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,19 @@
 spring:
+  mail:
+    default-encoding: UTF-8
+    host: smtp.gmail.com
+    username: 1701040163@s.hanu.edu.vn
+    password: tungvu101
+    port: 587
+    protocol: smtp
+    test-connection: false
+    properties:
+       mail:
+          smtp:
+             auth: true
+             starttls:
+                enable: true
+
   datasource:
     url: jdbc:mysql://hanuairlineserver.mysql.database.azure.com:3306/hanuairlinedb?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
     username: hanuadmin@hanuairlineserver
@@ -60,3 +75,5 @@ logging:
 springdoc:
   api-docs:
     path: /api-docs
+
+
